CORE-15212: Fixing IE11 issue for white space in free gifts mdoal.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_free-gifts.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_free-gifts.scss
@@ -668,11 +668,13 @@
           }
         }
       }
-
-      #drupal-modal.free-gift-listing-modal {
-        height: 100% !important;
-      }
     }
+  }
+}
+
+body:not(.ie) {
+  #drupal-modal.free-gift-listing-modal {
+    height: 100% !important;
   }
 }
 
